samples/_failures_safe/1761470996_d316bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_409fca65.c: In function ‘main’:
./samples/SAFE/__tmp_409fca65.c:150:5: error: expected declaration or statement at end of input
  150 |     int start;
      |     ^~~
